# python-nus-nextbus-new-api

./: README.md  pyproject.toml  setup.cfg  tox.ini
src/: api.py
test/: test_all.py
tests/: test_all.py
