[metadata]
name = python-nus-nextbus-new-api
version = 0.0.1
author = Hu Jialun
author_email = hujialun@comp.nus.edu.sg
description = A simple Python wrapper around SuibianP/nus-nextbus-new-api
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SuibianP/python-nus-nextbus-new-api
classifiers =
    Programming Language :: Python
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    requests
	python-dateutil

[options.packages.find]
where = src
